--- a/bootstrap5setup/index.html
+++ b/bootstrap5setup/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     
     <title>I AM SETTING UP BOOTSTRAP. HUZZAH!</title>
 
@@ -30,6 +31,8 @@
             <img src="images/shoes.jpg" class="img-fluid" alt="...">
 
         </div>
+
+        <script src="js/bootstrap.min.js"></script>
 
     </body>
 
